You have to be logged in to view the index page and you can now logout.

--- a/src/e_valuate/templates/base.html
+++ b/src/e_valuate/templates/base.html
@@ -8,6 +8,7 @@
     type="text/css" />
 </head>
 <body>
+  <a href="/logout">Logout</a>
   <h1>{% block head %}{% endblock %}</h1>
   {% block content %}{% endblock %}
 </body>
