--- a/src/e_valuate/templates/base.html
+++ b/src/e_valuate/templates/base.html
@@ -4,7 +4,7 @@
 <head>
   <title>E-Valuate |
     {% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="/site_media/style.css"
+  <link rel="stylesheet" href="/static/style.css"
     type="text/css" />
 </head>
 <body>
