--- a/src/e_valuate/evaluate/templates/index.html
+++ b/src/e_valuate/evaluate/templates/index.html
@@ -2,4 +2,8 @@
 {% block title %}Index{% endblock %}
 {% block head %}Index{% endblock %}
 {% block content %}
+<ul>
+  <li><a href="/evaluation/new">Ny Utvärdering</a></li>
+  <li><a href="/evaluation/new/template">Ny Mall</a></li>
+</ul>
 {% endblock %}
