index, unsent_all, unsent_single not completely done but the structure is there

--- a/src/e_valuate/evaluate/templates/index.html
+++ b/src/e_valuate/evaluate/templates/index.html
@@ -5,5 +5,7 @@
 <ul>
   <li><a href="/evaluation/new">Ny Utvärdering</a></li>
   <li><a href="/evaluation/new/template">Ny Mall</a></li>
+  <li><a href="/evaluation/list/unsent">Ej skickade Utvärderingar</a></li>
+  <li><a href="/evaluation/list/sent">Skickade Utvärderingar</a></li>
 </ul>
 {% endblock %}
