--- a/src/e_valuate/evaluate/templates/evaluation/questions.html
+++ b/src/e_valuate/evaluate/templates/evaluation/questions.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+﻿{% extends "base.html" %}
 {% block title %}
 	Frågor för utvärderingen {{ evaluation.name }}
 {% endblock %}
