--- a/src/e_valuate/evaluate/templates/list_questions.html
+++ b/src/e_valuate/evaluate/templates/list_questions.html
@@ -10,7 +10,7 @@
   <form action="" method="post">{% csrf_token %}
 <div id="textfield" style="margin-bottom: 40px;">
    
-    {{evaluationForm.name}}
+    <p>{{ questionList.name }}</p>
 </div> 
   
 
