--- a/src/e_valuate/templates/base.html
+++ b/src/e_valuate/templates/base.html
@@ -4,8 +4,9 @@
 <head>
   <title>E-Valuate |
     {% block title %}{% endblock %}</title>
-  <link rel="stylesheet" href="/static/style.css"
-    type="text/css" />
+  <link rel="stylesheet" href="/static/style.css" type="text/css" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
+  <script type="text/javascript" src="/static/scripts.js"></script>
 </head>
 <body>
   <a href="/logout">Logout</a>
